Implement remote servers config

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -47,3 +47,4 @@ suites:
       - recipe[test-clickhouse::test_clickhouse_server]
       - recipe[test-clickhouse::test_zookeeper_config]
       - recipe[test-clickhouse::test_macros_config]
+      - recipe[test-clickhouse::test_remote_servers_config]
