Add test-clickhouse install zookeeper recipe

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,7 +34,7 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[test-clickhouse::setup]
+      - recipe[test-clickhouse::install_zookeeper]
       - recipe[test-clickhouse::test_clickhouse_server]
       - recipe[test-clickhouse::test_zookeeper_config]
       - recipe[test-clickhouse::test_macros_config]
