--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,10 +5,11 @@ settings:
 driver:
   name: docker
   use_sudo: false
-  require_chef_omnibus: 12
 
 provisioner:
   name: chef_zero
+  product_name: cinc
+  product_version: 17
   nodes_path: 'test/integration/nodes'
   data_bags_path: 'test/integration/data_bags'
   environments_path: 'test/integration/environments'
@@ -18,17 +19,17 @@ verifier:
   name: inspec
 
 platforms:
+  - name: rockylinux-8
+    driver_plugin: docker
+    driver:
+      image: rockylinux:8
+      run_command: '/usr/lib/systemd/systemd'
+      run_options: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
   - name: centos-7
     driver_plugin: docker
     driver:
-      image: ernestasposkus/centos7
+      image: centos:7
       run_command: '/usr/lib/systemd/systemd'
-      run_options: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
-  - name: ubuntu-1604
-    driver_plugin: docker
-    driver:
-      image: ernestasposkus/ubuntu1604
-      run_command: '/lib/systemd/systemd'
       run_options: '--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'
 
 suites:
